--- a/index.html
+++ b/index.html
@@ -295,15 +295,16 @@
 <div class="i small" style="left:811px;  top:700px;" ><div class="o"><a href="http://www.dotsarecool.com/katam/withbg/level-970.png"><img src="http://www.dotsarecool.com/katam/Minimaps/Level_970.png"></a></div></div>
         </div>
         <h3 id="text">P1 - Segment 1</h3>
+        <h3 id="text2">Go towards King Golem, call P2 upon reaching the branching path. Then get Stone, hit switch, and kill King Golem</h3>
         <button id="P1.1"  style="left: 16px; top: 16px; opacity: 100%;" onclick="p11Switch()">P1 - 1</button>
         <button id="P1.2"  style="left: 16px; top: 64px;" onclick="p12Switch()">P1 - 2</button>
         <button id="P1.3"  style="left: 16px; top: 112px;" onclick="p13Switch()">P1 - 3</button>
         <button id="P1.4"  style="left: 16px; top: 160px;" onclick="p14Switch()">P1 - 4</button>
-        <button id="P2.1"  style="left: 16px; top: 208px;" onclick="p21Switch()">P2 - 1</button>
-        <button id="P2.2"  style="left: 16px; top: 256px;" onclick="p22Switch()">P2 - 2</button>
-        <button id="P2.3"  style="left: 16px; top: 304px;" onclick="p23Switch()">P2 - 3</button>
-        <button id="P2.4"  style="left: 16px; top: 352px;" onclick="p24Switch()">P2 - 4</button>
-        <button id="P2.5"  style="left: 16px; top: 400px;" onclick="p25Switch()">P2 - 5</button>
+        <button id="P2.1"  style="left: 16px; top: 208px; background-color: gold;" onclick="p21Switch()">P2 - 1</button>
+        <button id="P2.2"  style="left: 16px; top: 256px; background-color: gold;" onclick="p22Switch()">P2 - 2</button>
+        <button id="P2.3"  style="left: 16px; top: 304px; background-color: gold;" onclick="p23Switch()">P2 - 3</button>
+        <button id="P2.4"  style="left: 16px; top: 352px; background-color: gold;" onclick="p24Switch()">P2 - 4</button>
+        <button id="P2.5"  style="left: 16px; top: 400px; background-color: gold;" onclick="p25Switch()">P2 - 5</button>
     </body>
     <script src="script.js"></script>
 </html>
