videos and formatting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</div>
 	<div class="content">
 		<h2 class="text-center">Introduction</h2>
-		<p>With katam coop speedruns becoming more accessible thanks to katam soon releasing on NSO. I'm expecting there to be a greater interest in coop speedruns of this game. Below you will find links to the map guides for the any% 2P and 3P routes, along with the notes for the routes in point form.</p>
+		<p>With katam coop speedruns becoming more accessible thanks to katam soon releasing on NSO. I'm expecting there to be a greater interest in coop speedruns of this game. Below you will find links to the map guides for the any% 2P and 3P routes, along with videos and notes for the routes in point form.</p>
 		<p>Credit for the interactable Katam Map goes to <a href="https://isofrieze.com/">IsoFrieze.</a> My version is simply a fork of that.</p>
 		<p>If there are any mistakes, please contact me on discord <i>aidan#9280</i></p>
 	</div>
@@ -24,14 +24,14 @@
 	</div>
 	<div class="content">
 		<h2>2 Player Any% Notes</h2>
-		<h3>Player 1</h3>
+		<h3>Player 1 - <a href="https://www.youtube.com/watch?v=iRunGIJJXgI">Video by TG</a></h3>
 		<ol>
 			<li>Go towards King Golem, call P2 upon reaching the branching path. Then get Stone, hit switch, and kill King Golem</li>
 			<li>Grab Wheel right from Rainbow Switch, then go down to hit the Early Bottom Cabbage Switch. Go right and make your way to hit both Carrot Switches. Then go right from the Deep Carrot switch to defeat Mega Titan</li>
 			<li>Go right from Early Bottom Cabbage down to hit the Early Radish switch. Then make your way to Meta Knight</li>
-			<li>Go left from Early Bottom Cabbage all the way to Gobbler</li>
+			<li>Go left from Early Bottom Cabbage all the way to Gobbler</li><br>
 		</ol>
-		<h3>Player 2</h3>
+		<h3>Player 2 - <a href="https://youtu.be/lj4tUmS6uWA">Video Guide</a></h3>
 		<ol>
 			<li>Go ahead in Rainbow Route to grab Missile, then wait for P1</li>
 			<li>Once called by P1, go up to Candy Constellation. Then make your way to Master and Crazy Hands</li>
@@ -39,19 +39,21 @@
 			<li>Go right from Deep Carrot switch to grab wheel and Defeat Wiz</li>
 			<li>Go right from the Early Radish door and Defeat Moley</li>
 		</ol>
+	</div>
 
+	<div class="content">
 		<h2>3 Player Any% Notes</h2>
-		<h3>Player 1</h3>
+		<h3>Player 1 - <a href="https://www.youtube.com/watch?v=XKxi8MWDu6M">Video by Mr_Shasta</a></h3>
 		<ol>
 			<li>Go towards King Golem, call P2 upon reaching the branching path. Then get Stone, hit switch, and kill King Golem</li>
 			<li>Go right from Rainbow Switch to make your way to Kracko</li>
-			<li>Go left from Early Bottom Cabbage all the way to Gobbler</li>
+			<li>Go left from Early Bottom Cabbage all the way to Gobbler</li><br>
 		</ol>
 		<h3>Player 2</h3>
 		<ol>
 			<li>Go ahead in Rainbow Route to grab Missile, then wait for P1</li>
 			<li>Once called by P1, go up to Candy Constellation. Then make your way to Master and Crazy Hands</li>
-			<li>Get Wheel, then go right from Early Bottom Cabbage down to hit the Early Radish switch. Then make your way to Meta Knight, calling P1 to kill him faster</li>
+			<li>Get Wheel, then go right from Early Bottom Cabbage down to hit the Early Radish switch. Then make your way to Meta Knight, calling P1 to kill him faster</li><br>
 		</ol>
 		<h3>Player 3</h3>
 		<ol>
