--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<li>Once called by P1, go up to Candy Constellation. Then make your way to Master and Crazy Hands</li>
 			<li>Get Wheel, then go right from Early Bottom Cabbage down to hit the Early Radish switch. Then make your way to Meta Knight, calling P1 to kill him faster</li><br>
 		</ol>
-		<h3>Player 3 - <a href="https://youtu.be/tXllznh7Y2E">Video Guide</a></h3>
+		<h3>Player 3 - <a href="https://youtu.be/3S2wBQ33D-M">Video Guide</a></h3>
 		<ol>
 			<li>Wait for P1 to unlock the Rainbow Route Switch in Moonlight Mansion. Once unlocked, grab Wheel and make your way down to Early Bottom Cabbage Switch, then the Carrot Switches. Then go right from the Deep Carrot switch to defeat Mega Titan</li>
 			<li>Go right from Deep Carrot switch to grab wheel and Defeat Wiz</li>
