--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 	<div class="content">
 		<h2 class="text-center">Map Guides</h2>
 		<ul>
-			<li><a href="2P/2p.html">2 Player Any%</a></li>
-			<li><a href="3P/3p.html">3 Player Any%</a></li>
+			<li><a href="guides/2p.html">2 Player Any%</a></li>
+			<li><a href="guides/3p.html">3 Player Any%</a></li>
+			<li><a href="guides/4p.html">4 Player Any% [WIP]</a></li>
 		</ul>
 	</div>
 	<div class="content">
@@ -58,8 +59,34 @@
 		<h3>Player 3 - <a href="https://youtu.be/3S2wBQ33D-M">Video Guide</a></h3>
 		<ol>
 			<li>Wait for P1 to unlock the Rainbow Route Switch in Moonlight Mansion. Once unlocked, grab Wheel and make your way down to Early Bottom Cabbage Switch, then the Carrot Switches. Then go right from the Deep Carrot switch to defeat Mega Titan</li>
-			<li>Go right from Deep Carrot switch to grab wheel and Defeat Wiz</li>
+			<li>Go right from Deep Carrot switch to defeat Wiz</li>
 			<li>Go right from the Early Radish door and Defeat Moley</li>
+	</div>
+
+	<div class="content">
+		<h2>4 Player Any% Notes [WIP]</h2>
+		<p style="color: tomato;">*This route is a work in progress by myself and has not been tested in an actual coop setting.</p>
+		<h3>Player 1</h3>
+		<ol>
+			<li>Go towards King Golem, call P2 upon reaching the branching path. Then get Stone, hit switch, and kill King Golem</li>
+			<li>Go left from Early Bottom Cabbage all the way to Gobbler</li><br>
+		</ol>
+		<h3>Player 2</h3>
+		<ol>
+			<li>Go ahead in Rainbow Route to grab Missile, then wait for P1</li>
+			<li>Once called by P1, go up to Candy Constellation. Then make your way to Master and Crazy Hands</li>
+			<li>Go right from the Early Radish door and Defeat Moley</li><br>
+		</ol>
+		<h3>Player 3</h3>
+		<ol>
+			<li>Wait for P1 to unlock the Rainbow Route Switch in Moonlight Mansion. Once unlocked, grab Wheel and make your way down to Early Bottom Cabbage Switch, then the Carrot Switches. Then go right from the Deep Carrot switch to defeat Mega Titan</li>
+			<li>Go right from Deep Carrot switch to defeat Wiz</li><br>
+		</ol>
+		<h3>Player 4</h3>
+		<ol>
+			<li>Wait for P1 to unlock the Rainbow Route Switch in Moonlight Mansion. Once unlocked, Go right from Rainbow Switch to make your way to Kracko</li>
+			<li>Get Wheel, then go right from Early Bottom Cabbage down to hit the Early Radish switch. Then make your way to Meta Knight, calling P1 to kill him faster</li>
+		</ol>
 	</div>
 </body>
 </html>
