--- a/guides/4p.html
+++ b/guides/4p.html
@@ -15,7 +15,7 @@
         <div id="I3.1" style="background:url('../img/MT.png');" hidden="true;"></div>
         <div id="I3.2" style="background:url('../img/WizNoWH.png');" hidden="true;"></div>
         <div id="I4.1" style="background:url('../img/Krack.png');" hidden="true;"></div>
-        <div id="I4.2" style="background:url('../img/MK.png');" hidden="true;"></div>
+        <div id="I4.2" style="background:url('../img/MKWH.png');" hidden="true;"></div>
         <div id="map">
 <div class="i small" style="left:843px;  top:764px;" ><div class="o"><a href="http://www.dotsarecool.com/katam/withbg/level-101.png"><img src="http://www.dotsarecool.com/katam/Minimaps/Level_101.png"></a></div></div>
 <div class="i small" style="left:123px;  top:964px;" ><div class="o"><a href="http://www.dotsarecool.com/katam/withbg/level-102.png"><img src="http://www.dotsarecool.com/katam/Minimaps/Level_102.png"></a></div></div>
